--- a/config/facebooker.yml
+++ b/config/facebooker.yml
@@ -14,8 +14,8 @@ keith_development:
   application_name: "Schacht"
   canvas_name: schacht
   callback_url: http://web1.tunnlr.com:10107/
-  authorize_url: http://web1.tunnlr.com:10107/callback/install
-  uninstall_url: http://web1.tunnlr.com:10107/callback/remove
+  authorize_url: 
+  uninstall_url: 
   
   tunnel:
     public_host_username: tunnlr11
