finish integration iframe authentication

--- a/config/facebooker.yml
+++ b/config/facebooker.yml
@@ -8,12 +8,13 @@
 keith_development:
   api_key: 7c5d9d041a99c03159bbaf537ac42791
   secret_key: ac968876a0fa4eb1013fe120a30f218e
+  xd_receiver: /xd_receiver.html
   pretty_errors: false
   set_asset_host_to_callback_url: true
 
   application_name: "Schacht"
   canvas_name: schacht
-  callback_url: http://web1.tunnlr.com:10107/
+  callback_url: http://127.0.0.1:3000
   authorize_url: 
   uninstall_url: 
   
