--- a/config/facebooker.yml
+++ b/config/facebooker.yml
@@ -15,8 +15,8 @@ development:
   application_name: "Schacht"
   canvas_name: schacht
   callback_url: http://web1.tunnlr.com:10107/
-  authorize_url: 
-  uninstall_url: 
+  authorize_url: http://web1.tunnlr.com:10107/callback/install
+  uninstall_url: http://web1.tunnlr.com:10107/callback/remove
   connect_url: http://web1.tunnlr.com:10107
     
   tunnel:
@@ -35,8 +35,8 @@ keith_development:
   application_name: "Schacht"
   canvas_name: schacht
   callback_url: http://web1.tunnlr.com:10107/
-  authorize_url: 
-  uninstall_url: 
+  authorize_url: http://web1.tunnlr.com:10107/callback/install
+  uninstall_url: http://web1.tunnlr.com:10107/callback/remove
   connect_url: http://web1.tunnlr.com:10107
     
   tunnel:
